force-app/main/default/objects/Account/fields/Account_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Client_Status__c</fullName>
    <description>The Account Client Status tells us what our relationship is like with this company. Follow the Guidance for Success at each stage to optimize this information!</description>
    <label>Account Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Status1</valueSetName>
    </valueSet>
</CustomField>