force-app/main/default/objects/Account/fields/Account_Originator__c.field-meta.xml
<CustomField>
    <fullName>Account_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Originator is the RICHEY MAY EMPLOYEE who brought in the relationship with this account originally. Generally this is the first person to interact with this account. Filled from who entered in Dynamics and may need to be updated.
Contact SF admin if the person you&apos;re looking for isn&apos;t here.</description>
    <inlineHelpText>The Originator is the RICHEY MAY EMPLOYEE who brought in the relationship with this account originally. Generally this is the first person to interact with this account. Filled from who entered in Dynamics and may need to be updated.
Contact SF admin if the person you&apos;re looking for isn&apos;t here.</inlineHelpText>
    <label>Account Originator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Richey May &amp; Co.</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Account Originator)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>