force-app/main/default/objects/Account/fields/Account_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional: This is the external person (i.e. NOT an RMC employee) that referred this account to us. Used for relationship tracking.</description>
    <inlineHelpText>Optional: This is the external person (i.e. NOT an RMC employee) that referred this account to us. Used for relationship tracking.</inlineHelpText>
    <label>Account Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Account Referred By)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>