force-app/main/default/objects/Account/fields/Agency_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Agency_Approvals__c</fullName>
    <description>Mortgage Agency approvals that this Account has. Select all that apply.</description>
    <inlineHelpText>Mortgage Agency approvals that this Account has. Select all that apply.</inlineHelpText>
    <label>Agency Approvals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agencies_for_Approvals</valueSetName>
    </valueSet>
</CustomField>