force-app/main/default/objects/Account/fields/AI_Bank__c.field-meta.xml
<CustomField>
    <fullName>AI_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Bank the client uses. You will only be able to pull from accounts that have the Record type AI Service Provider</description>
    <inlineHelpText>The Bank the client uses. You will only be able to pull from accounts that have the Record type AI Service Provider</inlineHelpText>
    <label>AI - Bank</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You will only be able to pull from accounts with the Record Type AI Service Provider.</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>AI Service Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (AI - Bank)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>