force-app/main/default/objects/Account/fields/AI_Fund_Administrator__c.field-meta.xml
<CustomField>
    <fullName>AI_Fund_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Fund Administrator the client uses. You will only be able to pull from accounts that have the Record type AI Service Provider</description>
    <inlineHelpText>The Fund Administrator the client uses. You will only be able to pull from accounts that have the Record type AI Service Provider</inlineHelpText>
    <label>AI - Fund Administrator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (AI - Fund Administrator)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>