force-app/main/default/objects/Account/fields/AI_Outsourced_CFO__c.field-meta.xml
<CustomField>
    <fullName>AI_Outsourced_CFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Outsourced CFO the client uses. You will only be able to pull from accounts that have the Record type AI Service Provider</description>
    <inlineHelpText>The Outsourced CFO the client uses. You will only be able to pull from accounts that have the Record type AI Service Provider</inlineHelpText>
    <label>AI - Outsourced CFO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (AI - Outsourced CFO)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>