force-app/main/default/objects/Account/fields/AI_Prime_Broker__c.field-meta.xml
<CustomField>
    <fullName>AI_Prime_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The prime broker used by the client. You will only be able to select from the AI Service Provider accounts.</description>
    <inlineHelpText>The prime broker used by the client. You will only be able to select from the AI Service Provider accounts.</inlineHelpText>
    <label>AI - Prime Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (AI - Prime Broker)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>