force-app/main/default/objects/Account/fields/AI_Service_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>AI_Service_Provider_Type__c</fullName>
    <description>Select all that apply. If you&apos;re looking for a type of service provider that isn&apos;t available here, contact your SF Admin right away!</description>
    <inlineHelpText>Select all that apply. If you&apos;re looking for a type of service provider that isn&apos;t available here, contact your SF Admin right away!</inlineHelpText>
    <label>AI Service Provider Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AI_Service_Provider_Type</valueSetName>
    </valueSet>
</CustomField>