force-app/main/default/objects/Account/fields/Asset_Size_B__c.field-meta.xml
<CustomField>
    <fullName>Asset_Size_B__c</fullName>
    <description>This is the estimated Asset size of this company in Billions of Dollars.</description>
    <inlineHelpText>This is the estimated Asset size of this company in Billions of Dollars.</inlineHelpText>
    <label>Asset Size ($B)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>