force-app/main/default/objects/Account/fields/CCH_Id__c.field-meta.xml
<CustomField>
    <fullName>CCH_Id__c</fullName>
    <description>ID from CCH for admin use only</description>
    <label>CCH Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>