force-app/main/default/objects/Account/fields/Consolidated_Financials__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Financials__c</fullName>
    <description>Does this company use Consolidated Financials? Please select an option.</description>
    <inlineHelpText>Does this company use Consolidated Financials? Please select an option.</inlineHelpText>
    <label>Consolidated Financials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Entered</valueSetName>
    </valueSet>
</CustomField>