force-app/main/default/objects/Account/fields/Consolidated_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Schedules__c</fullName>
    <description>Does this company use consolidated schedules? Select an option.</description>
    <inlineHelpText>Does this company use consolidated schedules? Select an option.</inlineHelpText>
    <label>Consolidated Schedules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Entered</valueSetName>
    </valueSet>
</CustomField>