force-app/main/default/objects/Account/fields/Disqualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Notes__c</fullName>
    <inlineHelpText>Leave some notes for the team about why this account is disqualified. I.e. what do they compete with us in, why was a former client disqualified?</inlineHelpText>
    <label>Disqualification Notes</label>
    <type>TextArea</type>
</CustomField>