force-app/main/default/objects/Account/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Select the reason for disqualifying this account. You can add more details in the Disqualification Notes field.</description>
    <inlineHelpText>Select the reason for disqualifying this account. You can add more details in the Disqualification Notes field.</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Client_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Disqualified_Reason</valueSetName>
    </valueSet>
</CustomField>