force-app/main/default/objects/Account/fields/DOMO_Principal_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>DOMO_Principal_Company_Id__c</fullName>
    <description>Company Id column from this table in DOMO that ties all the different system Ids together: https://richeymay.domo.com/datasources/64ab3206-4758-4e27-9be0-ea52493c62a9/details/data/table
This is used to tie MsDyn, Xero and CCH Ids to the correct company listing. For DOMO admin use only.</description>
    <inlineHelpText>Company Id column from this table in DOMO that ties all the different system Ids together: https://richeymay.domo.com/datasources/64ab3206-4758-4e27-9be0-ea52493c62a9/details/data/table
This is used to tie MsDyn, Xero and CCH Ids to the correct company listing. For DOMO admin use only.</inlineHelpText>
    <label>DOMO Principal Company Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>