force-app/main/default/objects/Account/fields/EIN_Id__c.field-meta.xml
<CustomField>
    <fullName>EIN_Id__c</fullName>
    <description>EIN Id from data port for admin use only</description>
    <label>EIN Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>