force-app/main/default/objects/Account/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>Everything AFTER the &quot;@&quot; in the company&apos;s email address. This helps eliminate duplicates with similar names (i.e. @FirstMortgage.com vs. @1stMortgage.com are two different companies).</description>
    <inlineHelpText>Everything AFTER the &quot;@&quot; in the company&apos;s email address. This helps eliminate duplicates with similar names (i.e. @FirstMortgage.com vs. @1stMortgage.com are two different companies).</inlineHelpText>
    <label>Email Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>