force-app/main/default/objects/Account/fields/GNMA_Id__c.field-meta.xml
<CustomField>
    <fullName>GNMA_Id__c</fullName>
    <description>GNMA Id from DOMO for admin use only</description>
    <label>GNMA Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>