force-app/main/default/objects/Account/fields/HMDA_Loan_Volume_2019__c.field-meta.xml
<CustomField>
    <fullName>HMDA_Loan_Volume_2019__c</fullName>
    <description>HMDA Loan Volume from 2019 data pull.</description>
    <inlineHelpText>HMDA Loan Volume from 2019 data pull.</inlineHelpText>
    <label>2019 HMDA Loan Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>