force-app/main/default/objects/Account/fields/HMDA_Loan_Volume_2020__c.field-meta.xml
<CustomField>
    <fullName>HMDA_Loan_Volume_2020__c</fullName>
    <description>2020 HMDA Loan Volume from data pull</description>
    <inlineHelpText>2020 HMDA Loan Volume from data pull</inlineHelpText>
    <label>2020 HMDA Loan Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>