force-app/main/default/objects/Account/fields/HMDA_Respondent_Id__c.field-meta.xml
<CustomField>
    <fullName>HMDA_Respondent_Id__c</fullName>
    <description>HMDA Id for admin use only</description>
    <label>HMDA Respondent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>