force-app/main/default/objects/Account/fields/HMDA_Units__c.field-meta.xml
<CustomField>
    <fullName>HMDA_Units__c</fullName>
    <description>HMDA Units from most recent HMDA data pull - current as of 2020 numbers. This will be updated each year as the new HMDA report becomes available. Last updated date:</description>
    <inlineHelpText>HMDA Units from most recent HMDA data pull - current as of 2020 numbers. This will be updated each year as the new HMDA report becomes available. Last updated date:</inlineHelpText>
    <label>HMDA Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>