force-app/main/default/objects/Account/fields/HUD_Id__c.field-meta.xml
<CustomField>
    <fullName>HUD_Id__c</fullName>
    <description>HUD Id for admin use only</description>
    <label>HUD Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>