force-app/main/default/objects/Account/fields/LEI_Id__c.field-meta.xml
<CustomField>
    <fullName>LEI_Id__c</fullName>
    <description>LEI Id for admin use only</description>
    <label>LEI Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>