force-app/main/default/objects/Account/fields/LHFS_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>LHFS_Record_Type__c</fullName>
    <description>Loans held for sale value</description>
    <inlineHelpText>Loans held for sale value</inlineHelpText>
    <label>LHFS Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MSR_and_LHFS_Values</valueSetName>
    </valueSet>
</CustomField>