force-app/main/default/objects/Account/fields/M_E_Custom_Tags__c.field-meta.xml
<CustomField>
    <fullName>M_E_Custom_Tags__c</fullName>
    <description>M&amp;E Custom tags Select all that apply. If the tag you are looking for is missing, contact your SF Admin</description>
    <inlineHelpText>M&amp;E Custom tags Select all that apply. If the tag you are looking for is missing, contact your SF Admin</inlineHelpText>
    <label>M&amp;E Custom Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>AntiPiracy</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Roundtable</fullName>
            </value>
            <value>
                <fullName>Back to Hollywood</fullName>
            </value>
            <value>
                <fullName>Dr TPN</fullName>
            </value>
            <value>
                <fullName>TPN</fullName>
            </value>
            <value>
                <fullName>Pen Test</fullName>
            </value>
            <value>
                <fullName>SOC</fullName>
            </value>
            <value>
                <fullName>Previous Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>