force-app/main/default/objects/Account/fields/Mortgage_Channels__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Channels__c</fullName>
    <description>These are the channels a mortgage bank operates in. Add all that apply.</description>
    <inlineHelpText>These are the channels a mortgage bank operates in. Add all that apply.</inlineHelpText>
    <label>Mortgage Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mortgage_Channels</valueSetName>
    </valueSet>
</CustomField>