force-app/main/default/objects/Account/fields/Mortgage_Service_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Service_Provider_Type__c</fullName>
    <description>Select all that apply. If you&apos;re looking for a type not listed here, contact your salesforce admin</description>
    <inlineHelpText>Select all that apply. If you&apos;re looking for a type not listed here, contact your salesforce admin</inlineHelpText>
    <label>Mortgage Service Provider Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mortgage_Service_Provider_Type</valueSetName>
    </valueSet>
</CustomField>