force-app/main/default/objects/Account/fields/MS_Dyn_Account_Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Account_Created_DateTime__c</fullName>
    <description>MS Dynamics Created DateTime</description>
    <label>MS Dyn Account Created DateTime</label>
    <type>DateTime</type>
</CustomField>