force-app/main/default/objects/Account/fields/MS_Dyn_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Account_Id__c</fullName>
    <description>Microsoft Dynamics Account/Company ID from Import</description>
    <label>MS Dyn Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>