force-app/main/default/objects/Account/fields/MS_Dyn_Account_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Account_Owner_Id__c</fullName>
    <description>Account owner record from MS Dynamics</description>
    <label>MS Dyn Account Owner Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>