force-app/main/default/objects/Account/fields/MS_Dyn_Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Account_Owner_Name__c</fullName>
    <description>MS Dynamics account owner full name - to be replaced by SF user</description>
    <label>MS Dyn Account Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>