force-app/main/default/objects/Account/fields/MS_Dyn_Account_Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Account_Primary_Contact_ID__c</fullName>
    <description>Primary contact for the account from microsoft Dynamics</description>
    <label>MS Dyn Account Primary Contact ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>