force-app/main/default/objects/Account/fields/MSR_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>MSR_Record_Type__c</fullName>
    <description>how the company records Mortgage Servicing Rights</description>
    <inlineHelpText>how the company records Mortgage Servicing Rights</inlineHelpText>
    <label>MSR Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MSR_and_LHFS_Values</valueSetName>
    </valueSet>
</CustomField>