force-app/main/default/objects/Account/fields/NMLS_ID__c.field-meta.xml
<CustomField>
    <fullName>NMLS_ID__c</fullName>
    <description>NMLS ID for mortgage lenders. Use https://www.nmlsconsumeraccess.org/ to look it up. It should also be in the footer of the company website. ONLY ENTER NUMBERS, NO # OR OTHER CHARACTERS.</description>
    <inlineHelpText>NMLS ID for mortgage lenders. Use https://www.nmlsconsumeraccess.org/ to look it up. It should also be in the footer of the company website. ONLY ENTER NUMBERS, NO # OR OTHER CHARACTERS.</inlineHelpText>
    <label>NMLS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>