force-app/main/default/objects/Account/fields/Other_Mortgage_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Mortgage_Requirements__c</fullName>
    <description>These are approvals or requirements this account needs but does not have. These may represent audit opportunities. Select all that apply.</description>
    <inlineHelpText>These are approvals or requirements this account needs but does not have. These may represent audit opportunities. Select all that apply.</inlineHelpText>
    <label>Other Mortgage Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Other_Mortgage_Requirements</valueSetName>
    </valueSet>
</CustomField>