force-app/main/default/objects/Account/fields/Phone_EXT__c.field-meta.xml
<CustomField>
    <fullName>Phone_EXT__c</fullName>
    <description>Enter the phone extension, if applicable.</description>
    <inlineHelpText>Enter the phone extension, if applicable.</inlineHelpText>
    <label>Phone EXT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>