force-app/main/default/objects/Account/fields/Primary_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The primary account contact refers to the main person RM has contact with at this account.</description>
    <inlineHelpText>The primary account contact refers to the main person RM has contact with at this account.</inlineHelpText>
    <label>Primary Account Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>