force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>This is the broad audience or industry that applies to this account. It is used for reporting and marketing. This will affect the fields you can select in the subsegment field.</description>
    <inlineHelpText>This is the broad audience or industry that applies to this account. It is used for reporting and marketing. This will affect the fields you can select in the subsegment field.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>