force-app/main/default/objects/Account/fields/Servicing_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Portfolio__c</fullName>
    <description>This is the dollar amount the client services or subservices.</description>
    <inlineHelpText>This is the dollar amount the client services or subservices.</inlineHelpText>
    <label>Servicing Portfolio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>