force-app/main/default/objects/Account/fields/Shipping_Address_Same_as_Billing__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Same_as_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the shipping and billing address are the same.</description>
    <inlineHelpText>Check this box if the shipping and billing address are the same.</inlineHelpText>
    <label>Shipping Address Same as Billing</label>
    <type>Checkbox</type>
</CustomField>