force-app/main/default/objects/Account/fields/States_Licensed_In__c.field-meta.xml
<CustomField>
    <fullName>States_Licensed_In__c</fullName>
    <description>States where the mortgage lender is licensed separated by commas. This information is pulled from HMDA data. Last Updated:</description>
    <inlineHelpText>States where the mortgage lender is licensed separated by commas. This information is pulled from HMDA data. Last Updated:</inlineHelpText>
    <label>States Licensed In</label>
    <length>250</length>
    <type>Text</type>
</CustomField>