force-app/main/default/objects/Account/fields/SubSegment__c.field-meta.xml
<CustomField>
    <fullName>SubSegment__c</fullName>
    <description>This further narrows down the audience/industry that applies to this account. Select all that apply.</description>
    <inlineHelpText>This further narrows down the audience/industry that applies to this account. Select all that apply.</inlineHelpText>
    <label>SubSegment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubSegment</valueSetName>
    </valueSet>
</CustomField>