force-app/main/default/objects/Account/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <description>This is the type of entity the company is for tax purposes. Select all that apply.</description>
    <inlineHelpText>This is the type of entity the company is for tax purposes. Select all that apply.</inlineHelpText>
    <label>Tax Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Status</valueSetName>
    </valueSet>
</CustomField>