force-app/main/default/objects/Account/fields/Total_Won_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Won_Opportunity_Value__c</fullName>
    <description>The total amount from all Closed/Won Opportunities</description>
    <inlineHelpText>The total amount from all Closed/Won Opportunities</inlineHelpText>
    <label>Total Won Opportunity Value</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>