force-app/main/default/objects/Account/fields/Vendor_Accounting_System__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Accounting_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounting system used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Accounting system used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - Accounting System</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Accounting System)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>