force-app/main/default/objects/Account/fields/Vendor_Hedging__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Hedging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hedging system/provider used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Hedging system/provider used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - Hedging</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Hedging)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>