force-app/main/default/objects/Account/fields/Vendor_IRM_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Vendor_IRM_Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The channel partner used for Integrated Risk Management records.</description>
    <inlineHelpText>The channel partner used for Integrated Risk Management records.</inlineHelpText>
    <label>Vendor - IRM Channel Partner</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - IRM Channel Partner)</relationshipLabel>
    <relationshipName>AccountsMody</relationshipName>
    <type>Lookup</type>
</CustomField>