force-app/main/default/objects/Account/fields/Vendor_LOS__c.field-meta.xml
<CustomField>
    <fullName>Vendor_LOS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Origination System (LOS) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</description>
    <inlineHelpText>Loan Origination System (LOS) used by the client. You will only be able to select from the Vendors list (not accounts or contacts). If the Vendor you are looking for is missing, please add it to the list.</inlineHelpText>
    <label>Vendor - LOS</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - LOS)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>