force-app/main/default/objects/Account/fields/Vendor_Pen_Testing__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Pen_Testing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the company they use for their pen testing or used prior to Richey May if a current TPN client.</description>
    <inlineHelpText>This is the company they use for their pen testing or used prior to Richey May if a current TPN client.</inlineHelpText>
    <label>Vendor - Pen Testing</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Accounts (Vendor - Pen Testing)</relationshipLabel>
    <relationshipName>AccountsMoc2</relationshipName>
    <type>Lookup</type>
</CustomField>